nav bar now fixed. Need to hide scroll content behind navBar, fix alignment with location cards.

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html {
 nav {
     width: 100%;  /* i'm assuming full width */
     height: 69px; /* change it to desired height */
+    top: 0;
     position: fixed;
     z-index: 1;
     margin: 0 auto;
@@ -42,6 +43,11 @@ nav a {
 }
 
 /* ^^^ end nav / header ^^^ */
+
+.main {
+    padding: 70px;
+    margin-top: 70px;
+}
 
 section {
     text-align: center;
